# metalplay

./: .gitignore  LICENSE  README.md  pyproject.toml
metalplay/: __init__.py  __main__.py  cli.py  cli_controller.py  config.py  paths.py
metalplay/bottle/: manager.py
metalplay/compat/: __init__.py  crossover.py  desktop.py  display.py  fonts.py  games.py  graphics.py  process.py  registry.py  rockstar.py  rockstar_cef.py  ssl.py  steam_ui.py
metalplay/compat/cef_wrapper/: Makefile
metalplay/compat/cef_wrapper/src/: launcher-wrapper.c  socialclubhelper-wrapper.c
metalplay/controller/: __init__.py  compat.py  detect.py  profiles.py
metalplay/gui/: __main__.py  app.py  cache.py  native.py  revision.py  web.py
metalplay/gui/static/: app.css  index.html
metalplay/launcher/: run.py
metalplay/packaging/: AppIcon.icns  __init__.py  macos_app.py
metalplay/profiles/: default.json
metalplay/runtime/: dxmt.py  dxvk.py  installer.py  wine.py
metalplay/steam/: __init__.py  bootstrap.py  client.py  install_layout.py  library.py  webhelper_wrapper.py
metalplay/steam/wrapper/: Makefile
metalplay/steam/wrapper/src/: steamwebhelper-wrapper.c
metalplay/tune/: __init__.py  apply.py  detect.py  enable-power-mode.sh  power.py
scripts/: build-wine.sh  launch-gui.sh  setup.sh
tests/: test_bottle.py  test_controller.py  test_game_compat.py
