[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "metalplay"
version = "0.1.0"
description = "Run Windows games on macOS using Apple Metal via Wine and DXMT"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MetalPlay Contributors" }]
keywords = ["macos", "metal", "wine", "dxmt", "gaming", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Operating System :: MacOS",
    "Topic :: Games/Entertainment",
]

[project.optional-dependencies]
gui = ["pywebview>=5.0"]

[project.scripts]
metalplay = "metalplay.cli:main"
metalplay-gui = "metalplay.gui.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["metalplay*"]

[tool.setuptools.package-data]
metalplay = ["gui/static/*", "profiles/*", "compat/assets/*", "packaging/AppIcon.icns"]
